{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 240,
  "lineage": "09b1dbd5-b53d-b5d7-34de-4d45ecd1d5cc",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dee22c13ea7a9a67",
            "arn": "arn:aws:ec2:ap-south-1:058264186456:instance/i-0b2c1ff8fb22099b7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b2c1ff8fb22099b7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu-node-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0952fff3d63ad607d",
            "private_dns": "ip-10-0-2-109.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.109",
            "public_ip": "13.201.73.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f5abc26e649b92a5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f1e59b31aa4c806",
            "tags": {
              "Name": "MyEC2Instance"
            },
            "tags_all": {
              "Name": "MyEC2Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-093bd3c35823f356c"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.ec2_private",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.ec2_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264186456:internet-gateway/igw-0e87e8dc78e86e863",
            "id": "igw-0e87e8dc78e86e863",
            "owner_id": "058264186456",
            "tags": {
              "Name": "main_vpc_igw"
            },
            "tags_all": {
              "Name": "main_vpc_igw"
            },
            "vpc_id": "vpc-06c642d464e4cd43c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264186456:route-table/rtb-0aaae7d561f3d57ae",
            "id": "rtb-0aaae7d561f3d57ae",
            "owner_id": "058264186456",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e87e8dc78e86e863",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c642d464e4cd43c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018aa553361eb0e96",
            "route_table_id": "rtb-0aaae7d561f3d57ae",
            "subnet_id": "subnet-06eedbd24c922b066"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018aa553361eb0e96",
            "route_table_id": "rtb-0aaae7d561f3d57ae",
            "subnet_id": "subnet-06eedbd24c922b066"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_ec2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0492f5e1fa0020903",
            "route_table_id": "rtb-0aaae7d561f3d57ae",
            "subnet_id": "subnet-04f1e59b31aa4c806"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.ec2_private",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0492f5e1fa0020903",
            "route_table_id": "rtb-0aaae7d561f3d57ae",
            "subnet_id": "subnet-04f1e59b31aa4c806"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.ec2_private",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ec2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264186456:subnet/subnet-04f1e59b31aa4c806",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f1e59b31aa4c806",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264186456",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_ec2_private_subnet"
            },
            "tags_all": {
              "Name": "vpc_ec2_private_subnet"
            },
            "vpc_id": "vpc-06c642d464e4cd43c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264186456:subnet/subnet-06eedbd24c922b066",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06eedbd24c922b066",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264186456",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_private_subnet"
            },
            "tags_all": {
              "Name": "vpc_private_subnet"
            },
            "vpc_id": "vpc-06c642d464e4cd43c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264186456:vpc/vpc-06c642d464e4cd43c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bf7f81a236224172",
            "default_route_table_id": "rtb-020637ece44ed3ebc",
            "default_security_group_id": "sg-0d49f5603ebde0f82",
            "dhcp_options_id": "dopt-0f116ea325b108dc9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c642d464e4cd43c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020637ece44ed3ebc",
            "owner_id": "058264186456",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264186456:security-group/sg-00be779bbe0cfa701",
            "description": "Allow database access from specific IPs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00be779bbe0cfa701",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db_security_group",
            "name_prefix": "",
            "owner_id": "058264186456",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db_security_group"
            },
            "tags_all": {
              "Name": "db_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c642d464e4cd43c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264186456:security-group/sg-093bd3c35823f356c",
            "description": "Allow SSH access from a specific IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093bd3c35823f356c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_security_group",
            "name_prefix": "",
            "owner_id": "058264186456",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_security_group"
            },
            "tags_all": {
              "Name": "ec2_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c642d464e4cd43c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}